--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="description" content="Kaffeine Labs is a professional IT services company focused on high quality sustainable software delivery and training. Experienced in delivering projects for both public sector organisations and startups.">
     <meta name="keywords" content="java,php,scala,symfony,cucumber,junit,scalatest,behat,phpspec,clean,code,architecture,solid,tdd,bdd,ddd,test,behaviour,behavior">
     <meta name="author" content="Jakub Zalas">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+    <link rel="manifest" href="favicons/site.webmanifest">
     <link rel="stylesheet" type="text/css" href="/reset.css">
     <style type="text/css">
         body { max-width: 700px; margin-left: auto; margin-right: auto; color: #2f2125; font-family:'Sailec W05 Regular';}
