Add contact details

--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
         <div class="logo">
             <a href="index.html"><img src="kaffeinelabs.png" alt="Kaffeine Labs" class="img-fluid"></a>
         </div>
+
+        <nav id="navbar" class="navbar">
+            <ul>
+                <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+                <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+            </ul>
+            <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav>
     </div>
 </header>
 
@@ -73,6 +81,46 @@
 
 <main id="main">
 
+    <section id="contact" class="contact">
+        <div class="container">
+
+            <div class="section-title" data-aos="fade-up">
+                <h2>Contact Us</h2>
+            </div>
+
+            <div class="row">
+
+                <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+                    <div class="contact-about">
+                        <h3>Kaffeine Labs Ltd</h3>
+                        <p>We're based in London but work with clients all over the world. Drop us a message at <a href="mailto:info@kaffeinelabs.com" alt="Contact">info@kaffeinelabs.com</a>.</p>
+                        <div class="social-links">
+                            <a href="https://twitter.com/kaffeinelabs" class="twitter"><i class="bi bi-twitter"></i></a>
+                            <a href="https://www.linkedin.com/company/kaffeinelabs/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-5 col-md-12" data-aos="fade-up" data-aos-delay="300">
+                </div>
+
+                <div class="col-lg-3 col-md-6 mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
+                    <div class="info">
+                        <div>
+                            <i class="ri-map-pin-line"></i>
+                            <p>London</p>
+                        </div>
+
+                        <div>
+                            <i class="ri-mail-send-line"></i>
+                            <p><a href="mailto:info@kaffeinelabs.com" alt="Contact">info@kaffeinelabs.com</a></p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
 </main>
 
 <footer id="footer">
