--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description"
           content="Kaffeine Labs is a professional IT services company focused on high quality sustainable software delivery and training. Experienced in delivering projects for both public sector organisations and startups.">
     <meta name="keywords"
-          content="java,php,scala,symfony,cucumber,junit,scalatest,behat,phpspec,clean,code,architecture,solid,tdd,bdd,ddd,test,behaviour,behavior">
+          content="kotlin,java,csharp,dotnet,php,scala,architecture,tdd,bdd,ddd">
     <meta name="author" content="Jakub Zalas">
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
