Update the registered address

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     &copy; <strong>Kaffeine Labs Ltd</strong>
                     <div class="registration-details">
                     Registered in England and Wales under company number 9443242<br />
-                    Registered office: The Knoll Business Centre, Unit W8A, 325-327 Old Shoreham Road, Hove BN3 7GS<br />
+                    Registered office: 3rd Floor, 86-90 Paul Street, London, England, EC2A 4NE<br />
                     </div>
                 </div>
             </div>
