Update the Twitter link

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <h3>Kaffeine Labs Ltd</h3>
                         <p>We're based in London but work with clients all over the world. Drop us a message at <a href="mailto:info@kaffeinelabs.com" alt="Contact">info@kaffeinelabs.com</a>.</p>
                         <div class="social-links">
-                            <a href="https://twitter.com/kaffeinelabs" class="twitter"><i class="bi bi-twitter"></i></a>
+                            <a href="https://x.com/kaffeinelabs" class="twitter"><i class="bi bi-twitter"></i></a>
                             <a href="https://www.linkedin.com/company/kaffeinelabs/" class="linkedin"><i class="bi bi-linkedin"></i></a>
                         </div>
                     </div>
